--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,7 +1,9 @@
 <html>
 
     <head>
-
+ <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="/static/css/bootstrap.min.css" rel="stylesheet">
         <!-- Include roboto.css to use the Roboto web font, material.css to include the theme and ripples.css to style the ripple effect -->
         <link href="/static/css/roboto.min.css" rel="stylesheet">
