--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
         <div class="jumbotron" style="background:transparent;">
     <center>
     <h1 style="color:#FF3D00;">Eashan Kadam</h1>
-      <img class='img-circle' src="/static/img/Eashan.jpg" style="width:70%; height:70%;">
+      <img class='img-circle' src="/static/img/Eashan.jpg" style="width:35%; ">
    
  
       </center>
