--- a/templates/projects.html
+++ b/templates/projects.html
@@ -9,6 +9,8 @@
         <link href="/static/css/roboto.min.css" rel="stylesheet">
         <link href="/static/css/material.min.css" rel="stylesheet">
         <link href="/static/css/ripples.min.css" rel="stylesheet">
+        <link href="/static/css/font-awesome.min.css" rel="stylesheet">
+
 
 
     </head>
@@ -42,7 +44,7 @@
         <div class="jumbotron" style="background:transparent;">
     <center>
     <h1 style="color:#FF3D00;">Eashan Kadam</h1>
-      <img class='img-circle' src="/static/img/Eashan.jpg" style="width:20%; ">
+      <img class='img-circle' src="/static/img/Eashan.jpg" style="width:35%; ">
    
  
       </center>
@@ -118,7 +120,36 @@
 </div>
 <br><br>
 </div>
+<div id="sec2"  >
+  <div class="container shadow-z-3" style="width:50%;background: #ffffff;">
+    <div class="row">
+      <div class="col-md-2">
 
+        
+    </div>
+    <div class="col-md-8">
+    <center>
+    <button class="btn btn-warning btn-fab btn-raised"  data-toggle="tooltip"  data-placement="bottom" title="" data-original-title="Tooltip on bottom"><a href="https://www.linkedin.com/profile/view?id=302407256&trk=nav_responsive_tab_profile" style="color:#ffffff;"><i class="fa fa-linkedin"></i></a></button>
+    <button class="btn btn-warning btn-fab btn-raised "  ><a href="https://github.com/eashan" style="color:#ffffff;"><i class="fa fa-github"></i></a></button>
+    <button class="btn btn-warning btn-fab btn-raised "  ><a href="https://google.com/+EashanKadam" style="color:#ffffff;"><i class="fa fa-google-plus"></i></a></button>
+        <button class="btn btn-warning btn-fab btn-raised "  ><a href="https://www.facebook.com/Eashankadam" style="color:#ffffff;"><i class="fa fa-facebook-f"></i></a></button>
+                <button class="btn btn-warning btn-fab btn-raised "  ><a href="https://youtube.com/EashanKadam" style="color:#ffffff;"><i class="fa fa-youtube"></i></a></button>
+  </center>
+
+    </div>
+    <div class="col-md-2">
+    </div>
+
+        
+      </div>
+
+    </div>
+    <div class="row">
+   <br><br><br>
+
+    </div>
+  </div>
+</div>
 
       <div id="modal-about" class="modal fade" tabindex="-1">
   <div class="modal-dialog">
@@ -128,7 +159,7 @@
         <h3 class="modal-title">About Me</h3>
       </div>
       <div class="modal-body">
-        <h4>As an IT Undergraduate from VJTI, I have always strived to learn new Technologies, I believe that the best way to learn any Technology, is to apply it, which is why I take up Projects and see them through, this gives me tremendous exposure to the enviornment. </h4>
+       <h4>I am an IT Undergraduate from VJTI, I believe that I am a Software Developer by skill and an entrepreneur by heart, I have always strived to learn new Technologies, I believe that the best way to learn any Technology, is to apply it, which is why I take up Projects and see them through, this gives me tremendous exposure to the enviornment. </h4>
       </div>
       
     </div>
@@ -143,8 +174,9 @@
         <h3 class="modal-title">Resume</h3>
       </div>
       <div class="modal-body">
-       <iframe src="/static/doc/Resume.pdf" width="95%" height="90%"></iframe>
-      </div>
+       <object data="/static/doc/Resume.pdf" type="application/pdf" width="95%" height="90%">
+       <embed src="/static/doc/Resume.pdf" width="95%" height="90%"/>
+       </object>      </div>
       
     </div>
   </div>
