--- a/templates/projects.html
+++ b/templates/projects.html
@@ -44,7 +44,7 @@
         <div class="jumbotron" style="background:transparent;">
     <center>
     <h1 style="color:#FF3D00;">Eashan Kadam</h1>
-      <img class='img-circle' src="/static/img/Eashan.jpg" style="width:35%; ">
+      <img class='img-circle' src="/static/img/eashan1.jpg" style="width:35%; ">
    
  
       </center>
