--- a/templates/projects.html
+++ b/templates/projects.html
@@ -16,7 +16,7 @@
     </head>
 
     <body style="background: url('/static/img/back2.jpg') no-repeat center center fixed; background-size: cover; width:100%;">
-    <div class="container" style="background: url('static/img/back2.jpg') no-repeat center center fixed; background-size: cover; width:100%;">
+    <div  >
 
         <!-- Your site -->
         <div class="navbar navbar-warning navbar-fixed-top">
