gourmand-android-link

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -112,7 +112,7 @@
          <img class="img-circle" src="static/img/gourmand.png" style="width:200px; height:200px;"></a>
          </div>
          <div class="col-md-4">
-        <p class="lead">A Restaurant Finder Android Application with a Remote Server in Python. Developed in collaboration for the Credit Suisse VJTI Coding Competition. </p>
+        <p class="lead">A Restaurant Finder Android Application with a Remote Server in Python. Developed in collaboration for the Credit Suisse VJTI Coding Competition. Code for the Android App is <a href="https://github.com/eashan/gourmand">here</a> </p>
        </div>
       </div>
     </div>
